# lift-whitespace

./: README.md  lift-whitespace.cabal
.lift/: config.toml  tool.sh
app/: Engine.hs  HSpecTests.hs  Main.hs
docker-build-image/: Dockerfile  README
example/: MultiNewLinesEnd  NotSpaced  SpaceAtEnd  Spaced1.hs  Spaced2.hs
