cabal-version:      2.4
name:               lift-whitespace
version:            0.9.1.0

-- A short (one-line) description of the package.
synopsis: Detects (annoying) white-space plug-in for Sonatype Lift

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license: MIT

-- The package author(s).
author: Håkan Thörngren

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer: hth313@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable lift-whitespace
    main-is:          Main.hs
    other-modules:    Engine

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
                    , aeson
                    , bytestring
                    , extra
                    , filepath
                    , text
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite tests
    hs-source-dirs:      app
    ghc-options: -Wall
    type: exitcode-stdio-1.0
    main-is:             HSpecTests.hs
    other-modules:    Engine
    build-depends:       base
                       , hspec >= 1.8
                       , aeson
                       , bytestring
                       , extra
                       , filepath
                       , text
    default-language:    Haskell2010
